CBT-25 - Delete methods returns http 204. Code refactor